fixed overflow issues

--- a/styles/dt-style.css
+++ b/styles/dt-style.css
@@ -16,6 +16,10 @@ nav {
 	margin-top: 2px;
 	padding: 5px !important;
 }
+#content {
+	margin: 5px;
+	margin-top: 7px;
+}
 nav ul li {
 	box-shadow: 0 1px 0px 0 rgba(0, 0, 0, 0.3), 0 0px 2px 0 rgba(0, 0, 0, 0.3);
 	padding: 5px;
