--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,13 @@
 	font-family: "Cutive Mono", monospace;
 	margin: 0px;
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 div#header-top {
 	padding: 0px;
 	height: 70px;
 	background-color: white;
+	overflow: hidden;
 }
 a {
 	text-decoration: none;
@@ -25,9 +27,8 @@ main {
 #content {
 	background-color: rgba(204, 255, 102, 0.25);
 	border-radius: 2px;
-	width: 100%;
 	padding: 5px;
-	margin: 5px;
+	margin: 10px;
 	margin-top: 7px;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3), 0 1px 2px 0 rgba(0, 0, 0, 0.3);
 }
@@ -78,6 +79,7 @@ footer {
 	z-index: 9999;
 	width: 20px;
 	height: 20px;
+	overflow: hidden;
 }
                                                                   /*-- css for svg logo --*/
 .logo-cog {
